# versionlens-redux

./: .architectural-cohesion.json  .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .nycrc  .vscodeignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.jsonc  clippy.toml  justfile  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tasks.yml  tsconfig.base.json  tsconfig.json
crates/versionlens-cache/: Cargo.toml  README.md
crates/versionlens-cache/src/: entry.rs  key.rs  lib.rs  memory.rs  ttl.rs
crates/versionlens-cache/src/key/: tests.rs
crates/versionlens-cache/src/memory/: tests.rs
crates/versionlens-cache/src/ttl/: tests.rs
crates/versionlens-core/: Cargo.toml  README.md
crates/versionlens-core/src/: cache.rs  command.rs  concurrency.rs  config.rs  contract.rs  dependency.rs  dotnet_sources.rs  error.rs  fetch.rs  lib.rs  model.rs  non_registry.rs  prerelease.rs  presentation.rs  project.rs  registry.rs  runtime_config.rs  schema.rs  selection.rs  session.rs  snapshot.rs  status.rs  suggestion.rs  support.rs  vulnerability.rs
crates/versionlens-core/src/cache/: keys.rs
crates/versionlens-core/src/command/: install.rs  update.rs
crates/versionlens-core/src/config/: providers.rs  session.rs  suggestions.rs  tests.rs
crates/versionlens-core/src/dependency/: kind.rs  payload.rs  properties.rs
crates/versionlens-core/src/docker/: response.rs
crates/versionlens-core/src/dotnet_sources/: listing.rs  registry.rs
crates/versionlens-core/src/fetch/: http.rs  latest.rs
crates/versionlens-core/src/non_registry/: fixed_spec.rs  git.rs  local_path.rs
crates/versionlens-core/src/prerelease/: tests.rs
crates/versionlens-core/src/presentation/: diagnostics.rs  indicator.rs  title.rs
crates/versionlens-core/src/project/: version.rs
crates/versionlens-core/src/registry/: context.rs  context_helpers.rs  context_sources.rs  matches.rs  responses.rs  urls.rs
crates/versionlens-core/src/runtime_config/: tests.rs
crates/versionlens-core/src/schema/: tests.rs
crates/versionlens-core/src/session/: cache.rs  classify.rs  commands.rs  dependencies.rs  documents.rs  operation.rs  presentation.rs  resolution.rs
crates/versionlens-core/src/snapshot/: tests.rs
crates/versionlens-core/src/vulnerability/: cache.rs  fetch.rs  response.rs
crates/versionlens-edits/: Cargo.toml  README.md
crates/versionlens-edits/src/: lib.rs  range.rs  replacement.rs  sort.rs  update.rs
crates/versionlens-edits/src/replacement/: dispatch.rs  python.rs  ruby.rs  semver.rs
crates/versionlens-edits/src/sort/: comma.rs  groups.rs  slots.rs  tests.rs
crates/versionlens-edits/src/update/: tests.rs
crates/versionlens-http/: Cargo.toml  README.md
crates/versionlens-http/src/: client.rs  config.rs  error.rs  lib.rs  retry.rs
crates/versionlens-http/src/client/: agent.rs  headers.rs  send.rs  tests.rs
crates/versionlens-http/src/config/: tests.rs
crates/versionlens-http/src/retry/: tests.rs
crates/versionlens-model/: Cargo.toml
crates/versionlens-model/src/: document.rs  ecosystem.rs  lib.rs  manifest.rs  position.rs  range.rs
crates/versionlens-model/src/ecosystem/: tests.rs
crates/versionlens-model/src/manifest/: tests.rs
crates/versionlens-napi/: Cargo.toml  README.md  build.rs
crates/versionlens-napi/src/: api.rs  binding.rs  lib.rs  model.rs
crates/versionlens-napi/src/api/: tests.rs
crates/versionlens-napi/src/binding/: config.rs  input.rs  position.rs
crates/versionlens-napi/src/model/: input.rs  output.rs  position.rs
crates/versionlens-parsers/: Cargo.toml  README.md
crates/versionlens-parsers/src/: ansible_galaxy.rs  bazel_module.rs  bunfig.rs  cargo_config.rs  cargo_toml.rs  classify.rs  clojure_deps.rs  cocoapods_podfile.rs  composer_repositories.rs  conan.rs  cpanfile.rs  cpp.rs  docker.rs  document.rs  dotnet_sources.rs  dotnet_xml.rs  dub_sdl.rs  dune_project.rs  gemfile.rs  gleam_toml.rs  go_mod.rs  go_proxy.rs  gradle.rs  hackage.rs  haxelib.rs  helm_chart.rs  json_manifest.rs  julia.rs  kustomization_yaml.rs  leiningen_project.rs  lib.rs  luarocks.rs  maven_xml.rs  mix_exs.rs  model.rs  nimble.rs  nix_flake.rs  npmrc.rs  opam.rs  paket.rs  (+18 more)
crates/versionlens-parsers/src/bunfig/: tests.rs
crates/versionlens-parsers/src/cargo_config/: tests.rs
crates/versionlens-parsers/src/cargo_toml/: collect.rs  dependency.rs  paths.rs  tests.rs
crates/versionlens-parsers/src/classify/: content.rs  patterns.rs  tables.rs  tests.rs  uri.rs
crates/versionlens-parsers/src/composer_repositories/: tests.rs
crates/versionlens-parsers/src/docker/: compose_yaml.rs  file.rs  image.rs  tests.rs
crates/versionlens-parsers/src/document/: parsers.rs  test_support.rs  tests.rs
crates/versionlens-parsers/src/dotnet_sources/: model.rs  nuget_config.rs  parse.rs  protocol.rs  remote.rs  tests.rs
crates/versionlens-parsers/src/dotnet_xml/: attributes.rs  collect.rs  dependency.rs  tests.rs
crates/versionlens-parsers/src/gemfile/: github.rs  line.rs  sources.rs  standard.rs  syntax.rs  tests.rs
crates/versionlens-parsers/src/go_mod/: block.rs  dependency.rs  tests.rs
crates/versionlens-parsers/src/go_proxy/: tests.rs
crates/versionlens-parsers/src/gradle/: build.rs  catalog.rs
crates/versionlens-parsers/src/json_manifest/: collect.rs  deno.rs  dependency.rs  detect.rs  entry.rs  npm.rs  parse.rs  paths.rs  (+1 more)
crates/versionlens-providers/: Cargo.toml  README.md
crates/versionlens-providers/src/: lib.rs  python.rs  registry.rs  response.rs  vulnerability.rs
crates/versionlens-suggestions/: Cargo.toml  README.md
crates/versionlens-suggestions/src/: choices.rs  constructors.rs  lib.rs  model.rs  resolve.rs  suggestion.rs
crates/versionlens-versions/: Cargo.toml  README.md
crates/versionlens-versions/src/: latest.rs  lib.rs  model.rs  parse.rs  pep440.rs  policy.rs  project.rs  range.rs
crates/versionlens-vscode-model/: Cargo.toml  README.md
crates/versionlens-vscode-model/src/: codelens.rs  dependency.rs  diagnostic.rs  edit.rs  lib.rs  status.rs  suggestion.rs
(+1616 files in other folders)
