[package]
name = "versionlens-edits"
description = "Text edit generation for Version Lens."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
semver.workspace = true
unicode-normalization.workspace = true
versionlens-parsers.workspace = true
versionlens-suggestions.workspace = true
versionlens-versions.workspace = true
versionlens-vscode-model.workspace = true

[dev-dependencies]

[lints]
workspace = true
