[package]
name = "versionlens-edits"
description = "Text edit generation for Version Lens."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
semver.workspace = true
unicode-normalization.workspace = true
versionlens-model.workspace = true
versionlens-suggestions.workspace = true
versionlens-versions.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
