[package]
name = "versionlens-napi"
description = "N-API boundary for the Version Lens VS Code extension."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi.workspace = true
napi-derive.workspace = true
versionlens-core.workspace = true
versionlens-http.workspace = true
versionlens-model.workspace = true
versionlens-vscode-model.workspace = true

[build-dependencies]
napi-build.workspace = true

[lints]
workspace = true
