[package]
name = "versionlens-parsers"
description = "Manifest and document parsers for Version Lens."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
jsonc-parser.workspace = true
marked-yaml.workspace = true
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
versionlens-model.workspace = true

[lints]
workspace = true
