[package]
name = "versionlens-providers"
description = "Registry provider selection and request construction."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
semver.workspace = true
quick-xml.workspace = true
serde_json.workspace = true
versionlens-model.workspace = true
versionlens-versions.workspace = true

[lints]
workspace = true
