[package]
name = "versionlens-suggestions"
description = "Suggestion resolution for Version Lens."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
semver.workspace = true
versionlens-model.workspace = true
versionlens-versions.workspace = true

[lints]
workspace = true
