[package]
name = "versionlens-vscode-model"
description = "VS Code-facing serializable Version Lens models."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true

[lints]
workspace = true
